--- a/Ex19/app/src/main/res/layout/fragment_menu.xml
+++ b/Ex19/app/src/main/res/layout/fragment_menu.xml
@@ -4,19 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffff9900">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="30sp"/>
+        android:text="메뉴 프래그먼트"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="메뉴 화면으로" />
+        android:text="메인 화면으로" />
 
 </LinearLayout>
